--- a/app/css/style.css
+++ b/app/css/style.css
@@ -57,3 +57,12 @@
         height: 100%;
          
 }
+.daghespazio{
+    margin-left:100px;
+    margin-right:100px;
+}
+
+
+.sapUiSmallMarginEnd {
+  width:150px;
+}
