--- a/app/view/Main.view.xml
+++ b/app/view/Main.view.xml
@@ -1,113 +1,84 @@
-<mvc:View
-	controllerName="myapp.controller.Main"
-	xmlns="sap.ui.table"
-	xmlns:mvc="sap.ui.core.mvc"
-	xmlns:u="sap.ui.unified"
-	xmlns:c="sap.ui.core"
-        xmlns:l="sap.ui.layout"
-	xmlns:m="sap.m">
-	<m:Page
-		showHeader="true"
-		enableScrolling="true"
-                >
-		<m:content>
-			<Table
-				rows="{/ProductCollection}"
-				title="Products"
-				selectionMode="MultiToggle"
-				visibleRowCount="7">
-				<columns>
-					<Column width="11rem">
-						<m:Label text="Product Name" />
-						<template>
-							<m:Text text="{Name}"/>
-						</template>
-					</Column>
-					<Column width="11rem">
-						<m:Label text="Product Id" />
-						<template>
-							<m:Input value="{ProductId}"/>
-						</template>
-					</Column>
-					<Column width="6rem" hAlign="End">
-						<m:Label text="Quantity" />
-						<template>
-							<m:Label text="{Quantity}" />
-						</template>
-					</Column>
-					<Column width="9rem">
-						<m:Label text="Status" />
-						<template>
-							<m:ObjectStatus text="{Status}" state="{
-								path: 'Available',
-								formatter: '.formatAvailableToObjectState'
-							}"/>
-						</template>
-					</Column>
-					<Column width="9rem">
-						<m:Label text="Price" />
-						<template>
-							<u:Currency value="{Price}" currency="{CurrencyCode}"/>
-						</template>
-					</Column>
-					<Column width="12rem">
-						<m:Label text="Supplier" />
-						<template>
-							<m:ComboBox value="{SupplierName}" items="{/Suppliers}">
-								<c:Item text="{Name}"/>
-							</m:ComboBox>
-						</template>
-					</Column>
-					<Column width="9rem">
-						<m:Label text="Image" />
-						<template>
-							<m:Link text="Show Image" href="{ProductPicUrl}" target="_blank"/>
-						</template>
-					</Column>
-					<Column width="9rem">
-						<m:Label text="Details" />
-						<template>
-							<m:Button text="Show Details" press="handleDetailsPress"/>
-						</template>
-					</Column>
-					<Column width="7rem">
-						<m:Label text="Heavy Weight" />
-						<template>
-							<m:CheckBox selected="{
-								path: 'Heavy',
-								type: 'sap.ui.model.type.String'
-							}"/>
-						</template>
-					</Column>
-					<Column width="12rem">
-						<m:Label text="Category" />
-						<template>
-							<m:Select selectedKey="{Category}" items="{/Categories}">
-								<c:Item text="{Name}" key="{Name}"/>
-							</m:Select>
-						</template>
-					</Column>
-					<Column width="6rem" hAlign="Center">
-						<m:Label text="Status" />
-						<template>
-							<c:Icon src="{
-								path: 'Available',
-								formatter: '.formatAvailableToIcon'
-							}"/>
-						</template>
-					</Column>
-					<Column width="11rem" hAlign="Center">
-						<m:Label text="Delivery Date" />
-						<template>
-							<m:DatePicker value="{
-								path: 'DeliveryDate',
-								type: 'sap.ui.model.type.Date',
-								formatOptions: {source: {pattern: 'timestamp'}}
-							}"/>
-						</template>
-					</Column>
-				</columns>
-			</Table>
-		</m:content>
-	</m:Page>
+<mvc:View controllerName="myapp.controller.Main" xmlns:t="sap.ui.table" xmlns:mvc="sap.ui.core.mvc" xmlns:u="sap.ui.unified" xmlns:c="sap.ui.core" xmlns:l="sap.ui.layout" xmlns="sap.m">
+    <l:VerticalLayout width="100%">
+        <l:content>
+            <Panel class="sapUiDemoFlexBoxSizeAdjustments">
+                <headerToolbar>
+                    <Toolbar>
+                        <Title level="H2" text="My First POD" />
+                    </Toolbar>
+                </headerToolbar>
+                <FlexBox alignItems="Start">
+                    <items>
+                        <l:VerticalLayout width="100%">
+                            <l:content>
+                                <FlexBox alignItems="Start" direction="Column" class="daghespazio">
+                                    <items>
+                                        <Label text=""></Label>
+                                        <Button text="Start" type="Emphasized" class="sapUiSmallMarginEnd">
+                                            <layoutData>
+                                                <FlexItemData growFactor="1" />
+                                            </layoutData>
+                                        </Button>
+                                        <Button text="Stop" type="Emphasized" class="sapUiSmallMarginEnd">
+                                            <layoutData>
+                                                <FlexItemData growFactor="2" />
+                                            </layoutData>
+                                        </Button>
+                                        <Button text="Log DC" type="Emphasized" class="sapUiSmallMarginEnd">
+                                            <layoutData>
+                                                <FlexItemData growFactor="3" />
+                                            </layoutData>
+                                        </Button>
+                                        <Button text="Log NC" type="Emphasized" class="sapUiSmallMarginEnd">
+                                            <layoutData>
+                                                <FlexItemData growFactor="4" />
+                                            </layoutData>
+                                        </Button>
+                                        <Button text="Assembly" type="Emphasized" class="sapUiSmallMarginEnd">
+                                            <layoutData>
+                                                <FlexItemData growFactor="5" />
+                                            </layoutData>
+                                        </Button>
+                                        <Button text="Log comment" type="Emphasized" class="sapUiSmallMarginEnd">
+                                            <layoutData>
+                                                <FlexItemData growFactor="6" />
+                                            </layoutData>
+                                        </Button>
+                                    </items>
+                                </FlexBox>
+                            </l:content>
+                        </l:VerticalLayout>
+                        <t:Table rows="{/ProductCollection}" title="Products" selectionMode="MultiToggle" visibleRowCount="7" width="100%">
+                            <t:columns>
+                                <t:Column width="11rem">
+                                    <Label text="Product Name" />
+                                    <t:template>
+                                        <Text text="{Name}" />
+                                    </t:template>
+                                </t:Column>
+                                <t:Column width="11rem">
+                                    <Label text="Product Id" />
+                                    <t:template>
+                                        <Input value="{ProductId}" />
+                                    </t:template>
+                                </t:Column>
+                                <t:Column width="6rem" hAlign="End">
+                                    <Label text="Quantity" />
+                                    <t:template>
+                                        <Label text="{Quantity}" />
+                                    </t:template>
+                                </t:Column>
+                                <t:Column width="9rem">
+                                    <Label text="Status" />
+                                    <t:template>
+                                        <ObjectStatus text="{Status}" state="{         path: 'Available',         formatter: '.formatAvailableToObjectState'        }" />
+                                    </t:template>
+                                </t:Column>
+                            </t:columns>
+                        </t:Table>
+                    </items>
+                </FlexBox>
+            </Panel>
+        </l:content>
+    </l:VerticalLayout>
 </mvc:View>
