--- a/app/css/style.css
+++ b/app/css/style.css
@@ -62,7 +62,14 @@
     margin-right:100px;
 }
 
-
 .sapUiSmallMarginEnd {
   width:150px;
+}
+.margine
+{
+    margin:10px;
+}
+.centopercento{
+    width: 100%;
+    height: 100%;
 }
