--- a/app/view/Shoporder.view.xml
+++ b/app/view/Shoporder.view.xml
@@ -1,6 +1,6 @@
 <!-- <mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns:c="sap.ui.commons" xmlns="sap.m"
           xmlns:l="sap.ui.layout" xmlns:html="http://www.w3.org/1999/xhtml" xmlns:t="sap.ui.table"
-          controllerName="myapp.controller.Machine"
+          controllerName="myapp.controller.Shoporder"
           xmlns:ct="myapp.controls."  >
     <Page title="{locale>myapp.view.main.title}"
           showHeader="false"
@@ -23,30 +23,35 @@
 </mvc:View> -->
 <mvc:View
 	height="100%"
-        controllerName="myapp.controller.Machine"
+        controllerName="myapp.controller.Shoporder"
 	xmlns:mvc="sap.ui.core.mvc"
 	xmlns="sap.m">
 	<Page
 		showHeader="false"
-		enableScrolling="false" >
+		enableScrolling="false" 
+                showNavButton="true"
+		>
 		<TileContainer
 			id="container"
 			tileDelete="handleTileDelete"
 			tiles="{/}">
+
 			<StandardTile
 				icon="{icon}"
-				type="Monitor"
-				number="{id}"
-				title="{workcenter}"
+                                type="Monitor"
+				number="{QtyOrdered}"
+                                numberUnit="Qty Ordered"
+				title="{ShopOrder}"
                                 info="{info}"
 				infoState="{status}"
-                                press="navToShoporder"
+                                press="apriDialog"
+                                idshoporder="{id}"
                         />
 		</TileContainer>
 		<footer>
 			<Toolbar>
 				<ToolbarSpacer/>
-					<Button text="Settings" press="handleEditPress" />
+					<Button text="Back" press="onNavBack" />
 				<ToolbarSpacer/>
 			</Toolbar>
 		</footer>
